# django-streaming-coordinator

./: .gitignore  FIXES_SUMMARY.md  QUICKSTART.md  TESTING.md  TEST_RESULTS.md  TEST_STATUS.md  TO_AGENTS.md  demo.py  example_usage.py  pyproject.toml  stream_client.py
.github/workflows/: tests.yml
config/: settings.py
issues/: 01-lost-state-on-task-reload.md  02-memory-leaks-resource-management.md  03-single-process-architecture-limitation.md  04-error-handling-gaps.md  05-database-polling-antipattern.md  06-no-authentication-authorization.md  07-race-condition-task-startup.md  08-missing-observability.md  09-configuration-issues.md  10-testing-gaps.md  11-no-task-cancellation.md
streaming/: coordinator.py  models.py  server.py  tests.py
streaming/management/commands/: create_task.py
streaming/migrations/: 0001_initial.py  0002_continuetask.py  0003_continuetask_final_value_exampletask_final_value.py  0004_delete_continuetask_delete_exampletask.py
tests/: models.py  test_asyncio_patterns.py  test_cancellation.py  test_race_conditions.py  test_shutdown.py  tests.py
tests/management/commands/: create_task.py
tests/migrations/: 0001_initial.py  0002_asyncgeneratortask_httpxfetchtask_syncgeneratortask.py
